@@ -348,6 +348,12 @@
 <!ENTITY rdquo      "">
 <!ENTITY mdash      "">
 <!ENTITY ndash      "">
+<!ENTITY period     "">
+<!ENTITY eosperiod  "">
+<!ENTITY quest      "">
+<!ENTITY eosquest   "">
+<!ENTITY excl       "">
+<!ENTITY eosexcl    "">
 
 <!ENTITY auml "">
 <!ENTITY ouml "">
